--- a/BetweenTwoSets.Tests/Challenges.Tests.csproj
+++ b/BetweenTwoSets.Tests/Challenges.Tests.csproj
@@ -54,17 +54,11 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SetLogicTests.cs" />
+    <Compile Include="SetLogic\SetLogicTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\BetweenTwoSets\BetweenTwoSets.csproj">
-      <Project>{6b46ebe1-67fb-467a-9a6e-3645e56aabcf}</Project>
-      <Name>BetweenTwoSets</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
