--- a/Challenges/Challenges.csproj
+++ b/Challenges/Challenges.csproj
@@ -47,11 +47,13 @@
     <Compile Include="ApplesAndOranges\Fruit.cs" />
     <Compile Include="ApplesAndOranges\House.cs" />
     <Compile Include="ApplesAndOranges\Orange.cs" />
+    <Compile Include="BreakingRecords\CalculateBrokenRecords.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
