--- a/BetweenTwoSets.Tests/Challenges.Tests.csproj
+++ b/BetweenTwoSets.Tests/Challenges.Tests.csproj
@@ -59,6 +59,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Challenges\Challenges.csproj">
+      <Project>{4AFC74A7-3851-4C6C-9A4E-63A57AB4F807}</Project>
+      <Name>Challenges</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
