--- a/Challenges/Challenges.csproj
+++ b/Challenges/Challenges.csproj
@@ -60,12 +60,11 @@
     <Compile Include="MigratoryBirds\BirdWatcher.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SockMerchant\SockLogic.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="SockMerchant\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
