--- a/Challenges/Challenges.csproj
+++ b/Challenges/Challenges.csproj
@@ -56,6 +56,7 @@
     <Compile Include="BreakingRecords\CalculateBrokenRecords.cs" />
     <Compile Include="DayOfTheProgrammer\TimeMachine.cs" />
     <Compile Include="DivisibleSumPairs\ArrayCalculator.cs" />
+    <Compile Include="DrawingBook\Book.cs" />
     <Compile Include="MigratoryBirds\Bird.cs" />
     <Compile Include="MigratoryBirds\BirdWatcher.cs" />
     <Compile Include="Program.cs" />
@@ -65,8 +66,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DrawingBook\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
